fix name header to be left aligned

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -6,8 +6,7 @@
  html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
-}
+
 main.container{width: 450px;margin: 0 auto;background: white;padding-top: 50px;padding-bottom: 50px;}
 
 /*
@@ -38,10 +37,12 @@ outline: none;
  }
  article header {
    display: flex;
-  border-radius: 10px 10px 0px 0px;
- justify-content: space-between;
- padding: 10px;
- background-color: rgb(236, 235, 235);
+   border-radius: 10px 10px 0px 0px;
+    justify-content: space-between;
+    padding: 10px;
+   background-color: rgb(236, 235, 235);
+   
+  
  }
  article header img {
   width: 80px;
@@ -62,4 +63,8 @@ article p {
 }
 article header h2{
   color:#244751;
+}
+
+.userInfo {
+ display: flex;
 }
